Fri Apr 11 16:54:26 2014  Koichi Sasada  <ko1@atdot.net>

	* array.c: make shared arrays WB-protected objects.

	  Shared arrays were WB-unprotected object because
	  sharing array can modify shared array's buffer
	  if it occupied shared array.

	  [sharing array (ary)] -> [shared array (shared)] -> <buff>
	                |                                       A
	                +---------------------------------------+
	             write `buff' with WB(ary, &buff[i], obj)
	             -> if `ary' and `shared' are old, then only `ary'
	                will be remembered.
	             -> traverse from `ary'. But `shared' is old, so
	                that written `obj' is not marked.

	  It cause WB miss so that shared arrays were WB-unprotected.
	  (WB-unprotected objects are marked everytime if it is living)

	  This patch insert WB() for `shared' if it is needed.

Fri Apr 11 15:05:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_method_call_with_block, umethod_bind): call with
	  IClass including the module for a module instance method.
	  [ruby-core:61936] [Bug #9721]

	* vm_insnhelper.c (vm_search_super_method): allow bound
	  UnboundMethod case.

Fri Apr 11 12:02:30 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): set base address
	  which is retrived from dladdr to dladdr_fbases, to skip already
	  parsed objects.

Fri Apr 11 12:44:50 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_reject): may be turned into a shared array during
	  the given block.  [ruby-dev:48101] [Bug #9727]

Thu Apr 10 23:41:21 2014  Akinori MUSHA  <knu@iDaemons.org>

	* lib/net/ftp.rb (Net::FTP#login): [DOC] The default password for
	  anonymous login was changed to "anonymous@" in r25313.

Thu Apr 10 19:22:58 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_array.rb: remove useless `assert'.

Thu Apr 10 19:11:11 2014  Koichi Sasada  <ko1@atdot.net>
